--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,3 +23,12 @@ jobs:
           command: |
             . venv/bin/activate
             flake8 --statistics
+      # Step 4: run tests
+      - run:
+          name: Run tests
+          command: |
+            . venv/bin/activate
+            cd ./Connector
+            pytest -v --cov=eth tests/
+          environment:
+            COIN: ETH
