--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,8 @@ jobs:
             . venv/bin/activate
             cd ./scripts
             pip install -r requirements.txt
+            cd ../Connector
+            pip install -r requirements.txt
       # Step 3: run linter and tests
       - run:
           name: Run linter
