--- a/Connector/Dockerfile
+++ b/Connector/Dockerfile
@@ -2,10 +2,10 @@ FROM python:3
 
 WORKDIR /usr/src/app
 
-COPY . ./
-RUN pip3 install -r requirements.txt
+COPY . ./Connector
+RUN pip3 install -r Connector/requirements.txt
 
 EXPOSE 80
 
-RUN chmod +x docker-entrypoint.sh
-ENTRYPOINT ["/usr/src/app/docker-entrypoint.sh"]
+RUN chmod +x Connector/docker-entrypoint.sh
+ENTRYPOINT ["/usr/src/app/Connector/docker-entrypoint.sh"]
