--- a/Connector/requirements.txt
+++ b/Connector/requirements.txt
@@ -1,7 +1,8 @@
 aiohttp==3.7.2
 requests==2.24.0
 jsonschema==3.2.0
-pytest
-pytest-cov
-pytest-env
-coverage
+pytest==6.2.5
+pytest-cov==3.0.0
+pytest-env==0.6.2
+coverage==6.0.1
+web3==5.12.2
