--- a/Connector/tests/docker-compose/eth.yml
+++ b/Connector/tests/docker-compose/eth.yml
@@ -10,7 +10,7 @@ services:
       - 8545:8545
 
   connector:
-    build: ../../Connector
+    build: ../../.
     environment:
       COIN: ETH
       STAGE: ${STAGE}
