--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  ethtest:
     machine:
       image: ubuntu-1604:202007-01
     environment:
@@ -24,3 +24,39 @@ jobs:
           name: Run ETH Test
           command: |
             docker exec -it eth_development_api_connector_1 bash -c "cd Connector && python -m pytest -c tests/eth/pytest_eth.ini -s --cov=eth/ --cov=logger/ --cov=rpcutils/ --cov=wsutils/ tests/eth"
+    
+  btctest:
+    machine:
+      image: ubuntu-1604:202007-01
+    environment:
+      STAGE: development
+      PORT: 80
+      SSL_PORT: 443
+      NGINX_CONFIG_PATH: ../../nginx/nginx.conf
+      CERT_PATH: /etc/ssl/certs
+      BLOCKCHAIN_PATH: ./blockchain/    
+    steps:
+      - run: 
+          name: Deploy Development BTC Connector
+          command: |
+            docker-compose -f Connector/tests/docker-compose/btc.yml -p btc_development_api up --build -d
+      - run: 
+          name: Allow access to ports
+          command: |
+            sleep 5 && nc -vz localhost 8332
+      - run:
+          name: BitcoinCore Set up
+          command: |
+            docker exec -it btc_development_api_bitcoincore_1 bash -c "rm -rf /home/bitcoin/.bitcoin/regtest/wallets/*"
+      - run:
+          name: Run BTC Test
+          command: |
+            docker exec -it btc_development_api_connector_1 bash -c "cd Connector && python -m pytest -c tests/btc/pytest_btc.ini -s --cov=btc/ --cov=logger/ --cov=rpcutils/ --cov=wsutils/ tests/btc"
+
+
+workflows:
+  version: 2
+  tests:
+    jobs:
+      - btctest
+      - ethtest
