--- a/docker-compose/development/btc.yml
+++ b/docker-compose/development/btc.yml
@@ -14,6 +14,7 @@ services:
       -rpcport=8332
       -deprecatedrpc=generate
       -fallbackfee=0.0001
+      -zmqpubhashblock=tcp://0.0.0.0:28332
     volumes:
       - ${BLOCKCHAIN_PATH}/bitcoincode:/home/bitcoin/.bitcoin
 
