--- a/packages/nodechain-bitcoin-core/Dockerfile
+++ b/packages/nodechain-bitcoin-core/Dockerfile
@@ -23,7 +23,7 @@ COPY entrypoint.sh /entrypoint.sh
 
 VOLUME ["/home/bitcoin/.bitcoin"]
 
-EXPOSE 8332 8333 18332 18333 18443 18444 38333 38332
+EXPOSE 8332 8333 18332 18333 18443 18444 38333 38332 28332
 
 RUN chmod +x entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
