--- a/docker-compose/testnet/btc.yml
+++ b/docker-compose/testnet/btc.yml
@@ -3,36 +3,38 @@ services:
   bitcoincore:
     build: ../../packages/nodechain-bitcoin-core
     image: bitcoincore
-    command: -rpcuser=swapper 
-      -rpcpassword=swapper 
-      -server=1 
-      -rpcallowip=0.0.0.0/0 
-      -rpcbind=bitcoincore 
-      -txindex=1 
-      -testnet 
-      -rpcport=8332 
+    command: -rpcuser=swapper
+      -rpcpassword=swapper
+      -server=1
+      -rpcallowip=0.0.0.0/0
+      -rpcbind=bitcoincore
+      -txindex=1
+      -testnet
+      -rpcport=8332
       -zmqpubhashblock=tcp://0.0.0.0:28332
     volumes:
       - ${BLOCKCHAIN_PATH}/bitcoincode:/home/bitcoin/.bitcoin
 
-  electrumx:
-    image: lukechilds/electrumx
+  electrs:
+    build: ../../packages/nodechain-electrs
+    image: electrs
+    command: -v --timestamp
+    depends_on:
+      - bitcoincore
     environment:
-      DAEMON_URL: http://swapper:swapper@bitcoincore:8332
-      COIN: BitcoinSegwit
-      PEER_DISCOVERY: "off"
-      SERVICES: tcp://:50001
-      COST_SOFT_LIMIT: 0 #Disable cost limitation so electrumx does not crash electrum during sync
-      COST_HARD_LIMIT: 0
-      NET: testnet
+      TESTNET: 1
+      DAEMON_RPC_URL: bitcoincore:8332
+      ELECTRUM_RPC_URL: localhost:50001
     volumes:
-      - ${BLOCKCHAIN_PATH}/electrumx:/data
+      - ${BLOCKCHAIN_PATH}/electrs:/build/.electrs
 
   electrum:
     build: ../../packages/nodechain-electrum
     image: electrum
     environment:
       TESTNET: 1
+    ports:
+      - 30000:30000
 
   connector:
     build: ../../Connector
