--- a/docker-compose/mainnet/bch.yml
+++ b/docker-compose/mainnet/bch.yml
@@ -26,7 +26,7 @@ services:
     build: ../../Connector
     environment:
       COIN: BCH
-      STAGE: ${STAGE}
+      NETWORK: ${NETWORK}
     image: connector
 
   nginx:
