--- a/docker-compose/mainnet/xmr.yml
+++ b/docker-compose/mainnet/xmr.yml
@@ -12,7 +12,7 @@ services:
     build: ../../Connector
     environment:
       COIN: XMR
-      STAGE: ${STAGE}
+      NETWORK: ${NETWORK}
       PORT: ${PORT}
     image: connector
     depends_on:
