--- a/docker-compose/testnet/xmr.yml
+++ b/docker-compose/testnet/xmr.yml
@@ -3,7 +3,7 @@ services:
   monerod:
     build: ../../packages/nodechain-monerod
     image: monerod
-    command: --NETWORKnet --p2p-bind-ip=0.0.0.0 --p2p-bind-port=38080 --rpc-bind-ip=0.0.0.0 --rpc-bind-port=38081 --non-interactive --confirm-external-bind
+    command: --stagenet --p2p-bind-ip=0.0.0.0 --p2p-bind-port=38080 --rpc-bind-ip=0.0.0.0 --rpc-bind-port=38081 --non-interactive --confirm-external-bind
     volumes:
       - ${BLOCKCHAIN_PATH}/bitmonero:/home/monero/.bitmonero
     user: "${UID}:${GID}"
