--- a/docker-compose/regtest/btc.yml
+++ b/docker-compose/regtest/btc.yml
@@ -31,6 +31,7 @@ services:
       ELECTRUM_RPC_URL: 0.0.0.0:60401
     volumes:
       - ${BLOCKCHAIN_PATH}/electrs:/build/.electrs
+      - ${BLOCKCHAIN_PATH}/bitcoincode:/home/bitcoin/.bitcoin
 
   electrum:
     build: ../../packages/nodechain-electrum-regtest
