--- a/docker-compose/testnet/btc.yml
+++ b/docker-compose/testnet/btc.yml
@@ -24,9 +24,10 @@ services:
     environment:
       TESTNET: 1
       DAEMON_RPC_URL: bitcoincore:8332
-      ELECTRUM_RPC_URL: localhost:60001
+      ELECTRUM_RPC_URL: 0.0.0.0:50001
     volumes:
       - ${BLOCKCHAIN_PATH}/electrs:/build/.electrs
+      - ${BLOCKCHAIN_PATH}/bitcoincode:/home/bitcoin/.bitcoin
 
   electrum:
     build: ../../packages/nodechain-electrum
