Update bitcoin core with default wallet creation

--- a/docker-compose/regtest/btc.yml
+++ b/docker-compose/regtest/btc.yml
@@ -18,6 +18,8 @@ services:
       -zmqpubhashblock=tcp://0.0.0.0:28332
     volumes:
       - ${BLOCKCHAIN_PATH}/bitcoincode:/home/bitcoin/.bitcoin
+    environment:
+      NETWORK: ${NETWORK}
 
   electrs:
     build: ../../packages/nodechain-electrs
