BTC config schema updated

--- a/Connector/btc/rpcschemas/config.json
+++ b/Connector/btc/rpcschemas/config.json
@@ -22,6 +22,16 @@
         "bitcoincoreZmqProtocol": {
             "type": "string"
         },
+        "bitcoincoreCallbackProtocol": {
+            "type": "string",
+            "enum": [
+                "http",
+                "https"
+            ]
+        },
+        "bitcoincoreCallbackHost": {
+            "type": "string"
+        },
         "bitcoincoreZmqPort": {
             "type": "integer"
         },
