Try new config for CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   ethtest:
     machine:
       image: ubuntu-1604:202007-01
+      docker_layer_caching: true
     environment:
       NETWORK: regtest
       PORT: 80
@@ -46,6 +47,7 @@ jobs:
   btctest:
     machine:
       image: ubuntu-1604:202007-01
+      docker_layer_caching: true
     environment:
       NETWORK: regtest
       PORT: 80
