--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
   btctest:
     machine:
       image: ubuntu-1604:202007-01
+      parrallelism: 1
       docker_layer_caching: true
     environment:
       NETWORK: regtest
