--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,13 @@ jobs:
             pip3 install -r Connector/requirements.txt
             pip3 install -r scripts/requirements.txt
       - run: 
+          name: Build docker images
+          command: |
+            docker-compose -f Connector/tests/docker-compose/eth.yml -p eth_regtest_api build
+      - run: 
           name: Deploy ETH regtest nodes
           command: |
-            docker-compose -f Connector/tests/docker-compose/eth.yml -p eth_regtest_api up --build -d
+            docker-compose -f Connector/tests/docker-compose/eth.yml -p eth_regtest_api up -d
       - run:
           name: Add ethereumgo to /etc/hosts
           command: |
@@ -61,10 +65,14 @@ jobs:
             pip3 install -r Connector/requirements.txt
             pip3 install -r scripts/requirements.txt
       - run: 
+          name: Build docker images
+          command: |
+            docker-compose -f Connector/tests/docker-compose/btc.yml -p btc_regtest_api build
+          no_output_timeout: 1h
+      - run: 
           name: Deploy BTC regtest nodes
           command: |
             docker-compose -f Connector/tests/docker-compose/btc.yml -p btc_regtest_api up -d
-          no_output_timeout: 1h
       - run:
           name: Add electrum and bitcoincore to /etc/hosts
           command: |
