--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,12 @@ jobs:
             pip3 install -r Connector/requirements.txt
             pip3 install -r scripts/requirements.txt
       - run: 
-          name: Build docker images
+          name: build electrs image
+          command: |
+            docker build -f Connector/tests/docker-compose/btc.yml -t electrs:nodechain 
+          no_output_timeout: 1h
+      - run: 
+          name: Build docker compose images
           command: |
             docker-compose -f Connector/tests/docker-compose/btc.yml -p btc_regtest_api build
           no_output_timeout: 1h
