--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
       - run: 
           name: build electrs image
           command: |
-            docker build -f Connector/tests/docker-compose/btc.yml -t electrs:nodechain 
+            docker build -f packages/nodechain-electrs/Dockerfile -t electrs:nodechain 
           no_output_timeout: 1h
       - run: 
           name: Build docker compose images
