Added docker-compose networks, removed unnecessary variables

--- a/docker-compose/mainnet/bch.yml
+++ b/docker-compose/mainnet/bch.yml
@@ -22,18 +22,7 @@ services:
     build: ../../packages/nodechain-electron-cash
     image: electrum
 
-  connector:
-    build: ../../Connector
-    environment:
-      COIN: BCH
-      NETWORK: ${NETWORK}
-    image: connector
-
-  nginx:
-    image: nginx
-    volumes:
-      - ${NGINX_CONFIG_PATH}:/etc/nginx/nginx.conf
-      - ${CERT_PATH}:/etc/nginx/certs
-    ports:
-      - ${PORT}:80
-      - ${SSL_PORT}:443
+networks:
+  default:
+    external:
+      name: nodechain-network
