--- a/docker-compose/mainnet/btc.yml
+++ b/docker-compose/mainnet/btc.yml
@@ -31,19 +31,7 @@ services:
     build: ../../packages/nodechain-electrum
     image: electrum
 
-  connector:
-    build: ../../Connector
-    environment:
-      COIN: BTC
-      NETWORK: ${NETWORK}
-      PORT: ${PORT}
-    image: connector
-
-  nginx:
-    image: nginx
-    volumes:
-      - ${NGINX_CONFIG_PATH}:/etc/nginx/nginx.conf
-      - ${CERT_PATH}:/etc/nginx/certs
-    ports:
-      - ${PORT}:80
-      - ${SSL_PORT}:443
+networks:
+  default:
+    external:
+      name: nodechain-network
