--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   ethtest:
     machine:
-      image: ubuntu-1604:202007-01
+      image: ubuntu-2004:202201-02
       docker_layer_caching: true
     environment:
       NETWORK: regtest
@@ -20,12 +20,10 @@ jobs:
             source venv/bin/activate
             pip3 install -r Connector/requirements.txt
             pip3 install -r scripts/requirements.txt
-      - setup_remote_docker:
-          docker_layer_caching: true
       - run: 
-          name: Build docker images
+          name: Build docker compose images
           command: |
-            docker-compose -f Connector/tests/docker-compose/eth.yml -p eth_regtest_api build
+            docker-compose -f Connector/tests/docker-compose/eth.yml build
       - run: 
           name: Deploy ETH regtest nodes
           command: |
@@ -44,10 +42,9 @@ jobs:
           command: |
             source venv/bin/activate
             cd Connector && python -m pytest -c tests/eth/pytest_eth.ini -s --cov=eth/ tests/eth
-    
   btctest:
     machine:
-      image: ubuntu-1604:202007-01
+      image: ubuntu-2004:202201-02
       docker_layer_caching: true
     environment:
       NETWORK: regtest
@@ -65,17 +62,10 @@ jobs:
             source venv/bin/activate
             pip3 install -r Connector/requirements.txt
             pip3 install -r scripts/requirements.txt
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - run: 
-          name: build electrs image
-          command: |
-            docker build -t electrs:nodechain packages/nodechain-electrs
-          no_output_timeout: 1h
       - run: 
           name: Build docker compose images
           command: |
-            docker-compose -f Connector/tests/docker-compose/btc.yml -p btc_regtest_api build
+            docker-compose -f Connector/tests/docker-compose/btc.yml build
           no_output_timeout: 1h
       - run: 
           name: Deploy BTC regtest nodes
