Bug fix running connector inside container

--- a/Connector/Dockerfile
+++ b/Connector/Dockerfile
@@ -1,8 +1,9 @@
 FROM python:3.7
 
 WORKDIR /usr/src/app
+COPY ./Connector ./Connector
+COPY .availableCurrencies.json ./.availableCurrencies.json
 
-COPY . ./Connector
 RUN pip3 install -r Connector/requirements.txt
 
 EXPOSE 80 28332
