--- a/docker-compose/regtest/eth.yml
+++ b/docker-compose/regtest/eth.yml
@@ -5,6 +5,8 @@ services:
     command: -p=8545 -h=0.0.0.0 -m="piece effort bind that embrace enrich remind powder sudden patient legend group"
     volumes:
       - ${BLOCKCHAIN_PATH}/ethereumgo:/root/.ethereum
+    ports:
+      - "8545:8545"
 
   connector:
     build: ../../Connector
