--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
       - run: 
           name: Build docker compose images
           command: |
-            docker-compose -f Connector/tests/docker-compose/btc.yml -p btc_regtest_api build
+            docker-compose -f Connector/tests/docker-compose/btc.yml -p btc_regtest_api build --no-rm
           no_output_timeout: 1h
       - run: 
           name: Deploy BTC regtest nodes
