--- a/Connector/Dockerfile
+++ b/Connector/Dockerfile
@@ -2,11 +2,10 @@ FROM python:3.7
 
 WORKDIR /usr/src/app
 
-COPY ./requirements.txt ./Connector/
+COPY requirements.txt ./Connector/requirements.txt
 RUN pip3 install -r Connector/requirements.txt
 
 COPY . ./Connector
-
 
 EXPOSE 80 28332
 
