--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,11 @@ jobs:
             pip3 install -r Connector/requirements.txt
             pip3 install -r scripts/requirements.txt
       - run: 
+          name: Check Lint
+          command: |
+            source venv/bin/activate
+            flake8 --statistics
+      - run: 
           name: Deploy ETH regtest nodes
           command: |
             docker-compose -f Connector/tests/docker-compose/eth.yml -p eth_regtest_api up -d
@@ -62,6 +67,11 @@ jobs:
             source venv/bin/activate
             pip3 install -r Connector/requirements.txt
             pip3 install -r scripts/requirements.txt
+      - run: 
+          name: Check Lint
+          command: |
+            source venv/bin/activate
+            flake8 --statistics
       - run: 
           name: Build docker compose images
           command: |
