--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
             docker-compose -f Connector/tests/docker-compose/btc.yml -p btc_regtest_api build --no-rm
           no_output_timeout: 1h
       - run: 
-          name: Deploy BTC regtest nodes
+          name: Deploy BTC regtest node
           command: |
             docker-compose -f Connector/tests/docker-compose/btc.yml -p btc_regtest_api up -d
       - run:
